--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://himanshupatkar274.github.io/Portfolio",
+  "homepage": "https://himanshupatkar274.github.io",
   "browserslist": {
     "production": [
       ">0.2%",
