--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.3",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
@@ -28,7 +29,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://himanshupatkar274.github.io/Portfolio",
+  "homepage": "https://himanshupatkar274.github.io/",
   "browserslist": {
     "production": [
       ">0.2%",
